refactor proxy, begin setting up AWS

--- a/public/index.html
+++ b/public/index.html
@@ -3,21 +3,16 @@
 
 <head>
   <title>Page Title</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+    crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="http://localhost:3000/video-player-service/assets/style.css">
 </head>
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-<link rel="stylesheet" href="/video-player/style.css">
 
 <body>
   <div id="app"></div>
-  <div id="searchBar"></div>
-  <div id="videoPlayer"></div>
-  <div id="videoList"></div>
-  <div id="commentsSection"></div>
-  <script src="/video-player/bundle.js"></script>
-  <!-- <script src="/video-list/bundle.js"></script>
-  <script src="/comments/bundle.js"></script> -->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="/video-player-service/assets/bundle.js"></script>
 </body>
 
 </html>
