--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,35 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
     crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="/video-player-service/assets/style.css">
+  <link rel="stylesheet" type="text/css" href="/video-list-service/assets/style.css">
+  <link rel="stylesheet" type="text/css" href="/comments-service/assets/style.css">
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="app">
+    <div id="search-bar">
+      <div className="searchBar">
+        <form>
+          <input id="searchInputField" type="text" placeholder="Search" />
+        </form>
+      </div>
+    </div>
+    <div>
+      <div class="row">
+        <div class="col-xl-8">
+          <div id="video-player"></div>
+          <div id="comments-section"></div>
+        </div>
+        <div class="col-xl-4">
+          <div id="video-list"></div>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="/video-player-service/assets/bundle.js"></script>
-</body>
+  <script src="/video-list-service/assets/bundle.js"></script>
+  <script src="/comments-service/assets/bundle.js"></script>
+</body> 
 
 </html>
