--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,14 @@
 
 <body>
   <div id="app">
-    <div id="search-bar">
-      <div className="searchBar">
-        <form>
-          <input id="searchInputField" type="text" placeholder="Search" />
-        </form>
+    <div class="row">
+      <div class="col-xl-8">
+        <div id="search-bar">
+          <i id="youTubeIcon" class="fab fa-youtube"></i>
+          <form id='search-form'>
+            <input id="searchInputField" type="text" placeholder="Search" />
+          </form>
+        </div>
       </div>
     </div>
     <div>
@@ -36,6 +39,6 @@
   <script src="/video-player-service/assets/bundle.js"></script>
   <script src="/video-list-service/assets/bundle.js"></script>
   <script src="/comments-service/assets/bundle.js"></script>
-</body> 
+</body>
 
 </html>
